<resources>
    <string name="app_name">RememberBirthday</string>

    <!-- Activity title -->
    <string name="title_main">Напоминалка ДР</string>
    <string name="title_detail_person">Информация об имениннике</string>
    <string name="title_add_person">Добавить именинника</string>
    <string name="title_activity_settings">Экран настроек</string>
    <string name="title_activity_help">Помощь</string>

    <!-- ERRORS -->
    <string name="error_network_not_available">Интернет не доступен, проверьте настройки подключения</string>
    <string name="error_server_return_incorrect_data">Сервер вернул некорректные данные.</string>
    <string name="error_unknown">Неизвестная ошибка, обратитесь к разработчику</string>
    <string name="error_unknown_http_error">Неизвестная ошибка HTTP</string>

    <string name="error_401">401: не авторизован</string>
    <string name="error_403">403: доступ запрещен</string>
    <string name="error_404">404: информация не найдена</string>

    <string name="error_person_not_found">Ошибка: пользователь не найден!</string>
    <string name="error_user_not_found">Ошибка: пользователь не найден в базе данных</string>
    <string name="error_person_not_add">Ошибка: пользователь не может быть добавлен</string>
    <string name="error_person_not_edit">Ошибка: пользователь не может быть изменен</string>

    <string name="wrong_date_millis">Заполните, пожалуйста, дату рождения</string>
    <string name="wrong_name">Пожалуйста, введите имя!</string>
    <string name="wrong_date">Пожалуйста, введите дату рождения!</string>
    <!-- END ERRORS -->

    <!-- Main activity -->
    <string name="upcoming_birthdays">Ближайшие дни рождения:</string>
    <string name="text_no_birthdays">У вас пока нет именинников</string>
    <string name="button_add_first_birthday">Добавить именинника</string>

    <!-- Detail activity -->
    <string name="age">Возраст</string>
    <string name="birthday">День рождения</string>
    <string name="phone">Телефон</string>

    <!-- Add, Edit activity -->
    <string name="image_description">Картинка</string>
    <string name="note">Заметка</string>
    <string name="pick_phone">Присоединить номер</string>
    <string name="hint_pick_phone">Звоните и отсылайте смс</string>
    <string name="hint_add_date">Выберите дату рождения</string>
    <string name="date_birthday">День рождения</string>
    <string name="bind_account">Присоединить контакт</string>
    <string name="hint_enter_name">Имя</string>
    <string name="hint_enter_note">Составьте краткое описание увлечений и интересов именинника.</string>

    <!-- Search Activity -->
    <string name="search_view_birthdays">Поиск именинника</string>

    <!-- Dialog + toast -->
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="select">Выбрать</string>
    <string name="toast_success_delete_user">Пользователь был успешно удален.</string>
    <string name="dialog_title_confirm_delete_user">Удалить контакт?</string>
    <string name="dialog_message_confirm_delete_user">Подтверждая действие, вы удалите полностью пользователя со всеми данными.</string>
    <string name="dialog_select_date">Выберите дату рождения</string>

    <!-- Menu -->
    <string name="menu_search">Поиск</string>
    <string name="menu_edit">Редактировать контакт</string>
    <string name="menu_delete">Удалить контакт</string>
    <string name="menu_save">Сохранить</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_help">Помощь</string>

    <!-- Preferences -->
    <string name="settings_notification">Настройка уведомлений</string>
    <string name="pref_enable_call">Звуковое уведомление</string>
    <string name="pref_enable_call_summary">Установите, чтобы приложение сигнализировало об именинниках</string>
    <string name="pref_enable_vibrate">Вибрация</string>
    <string name="pref_ringtone">Мелодия</string>
    <string name="pref_ringtone_summary">Установите мелодию для оповещения</string>
    <string name="pref_title_ringtone_time">Время для оповещения</string>
    <string name="default_alarm_time">10:00:00.000</string>


    <!-- Helper -->
    <string name="years">лет</string>
    <string name="year_rus">года</string>
    <string name="year">год</string>
    <string name="sms_to">smsto:</string>
    <string name="tel_to">tel:</string>


    <!-- Notification -->
    <string name="notification_title">Напоминание</string>
    <string name="notification_person_today_birthday">%1$s сегодня отмечает ДР</string>
    <string name="notification_person_date_birthday">%1$s %2$s.%3$s отмечал ДР</string>
    <string name="birthday_today">Сегодня</string>
    <string name="settings_title">Настройка уведомлений</string>


    <!-- Permissions -->
    <string name="ok">OK</string>
    <string name="permission_rationale_title_read_contacts">Доступ к контактам</string>
    <string name="permission_rationale_message_read_contacts">Напоминалка ДР нужен доступ к твоим контактам, чтобы присоединить телефонный номер к имениннику, и иметь возможность звонить и отсылать сообщения прямо со страницы пользователя.</string>
    <string name="error_permission_denied_read_contacts">Нет разрешения на чтение контактов</string>

    <string name="permission_rationale_title_write_storage">Доступ к памяти</string>
    <string name="permission_rationale_message_write_storage">Напоминалка ДР нужен доступ к памяти телефона, чтобы добавить фотографию именинника, редактировать её, и сохранить уменьшенную копию.</string>
    <string name="error_permission_denied_write_storage">Нет разрешения на доступ к памяти телефона</string>

    <!-- Help Activity -->
    <string name="tv_help_header_answer_notifications">Почему мне не приходят уведомления?</string>
    <string name="tv_help_description_answer_notifications"><![CDATA[<p>Некоторые производители оборудования (особенно китайские) имеют режимы экономии энергии, которые блокируют работу будильников приложения и запрещают их автозапуск.</p><p><br/>Чтобы уведомления от приложения приходили вовремя, пройдите несколько шагов:</p><p><br/>1. Отключите режим экономии энергии или добавьте приложение в белый список (Настройки > Батарея > Экономия заряда батареи).</p><p><br/>2. Добавьте Напоминалка ДР в исключения программ, которые блокируют работу в фоновом режиме («Battery Saver», «Clean Master» или др.).</p><p><br/>3. Убедитесь, что для приложения Напоминалка ДР разрешены уведомления (Настройки > Приложения > Напоминалка ДР).</p>]]></string>
    <string name="tv_help_header_samsung">Для смартфонов Samsung</string>
    <string name="tv_help_description_samsung">Найдите приложение «Smart Manager», нажмите на батарею, затем на «Подробно». Убедитесь, что для приложения Напоминалка ДР отключено энергосбережение.</string>
    <string name="tv_help_header_huawei">Для смартфонов Huawei</string>
    <string name="tv_help_description_huawei">Откройте настройки телефона, перейдите в «Энергосбережение», затем откройте вкладку «Защищенные приложения» и отметьте в списке Напоминалка ДР.</string>
    <string name="tv_help_header_xiaomi">Для смартфонов Xiaomi</string>
    <string name="tv_help_description_xiaomi"><![CDATA[<p>1. Откройте настройки телефона, перейдите в «Безопасность» (или будет доступен сразу пункт «Разрешения»), далее найдите пункт «Разрешения», нажмите «Автостарт», найдите приложение Напоминалка ДР и разрешите автозапуск.</p><p><br/>2. Откройте настройки телефона, перейдите в «Батарея и производительность», далее найдите в подразделах настройки экономии энергии для конкретного приложения, и выберите «Нет ограничений» для Напоминалка ДР.</p>]]></string>
    <string name="tv_help_header_addition">Дополнительные настройки</string>
    <string name="tv_help_description_addition">В зависимости от версии оболочки (EMUI, MIUI, Oxygen и др.), применяемой производителем, настройки могут находиться в разных местах.</string>


</resources>
