<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/settings_notification"
        android:key="pref_key_storage_settings"
        android:textSize="8dp">
        <CheckBoxPreference
            android:key="pref_sync"
            android:title="@string/pref_enable_call"
            android:summary="@string/pref_enable_call_summary"
            android:defaultValue="false"
            />
        <RingtonePreference
            android:key="pref_ringtone"
            android:title="@string/pref_ringtone"
            android:summary="@string/pref_ringtone_summary"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:dependency="pref_sync"/>
            <!-- android:defaultValue="content://settings/system/notification_sound" -->

        <CheckBoxPreference
            android:key="pref_vibrate"
            android:title="@string/pref_enable_vibrate"
            android:summary="@string/pref_enable_call_summary"
            android:defaultValue="false"
            />
        <dmitrykuznetsov.rememberbirthday.old.TimePreference
            android:key="timePrefA_Key"
            android:title="@string/pref_title_ringtone_time"
            android:defaultValue="10:00:00.000"/>
    </PreferenceCategory>
<!--
    <PreferenceCategory
        android:title="@string/settings_listview"
        android:key="pref_key_storage_settings">
        <ListPreference
            android:key="pref_key_listdr_lastdays"
            android:title="@string/pref_title_listdr_lastdays"

            android:entries="@array/pref_countday_listArray"
            android:entryValues="@array/pref_countday_listValues"
            android:defaultValue="360"
             />
    </PreferenceCategory>
-->

</PreferenceScreen>