<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="dmitrykuznetsov.rememberbirthday.features.birthday.detail.DetailBirthdayActivityVM" />
    </data>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_face_add"
            app:civ_border_color="#00000000"
            app:civ_border_width="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            bind:imageUrl="@{viewModel.personData.pathImage}" />

        <TextView
            android:id="@+id/tvDetailName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@{viewModel.personData.name}"
            android:textColor="#333"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintTop_toTopOf="@+id/profile_image" />

        <TextView
            android:id="@+id/tvHeaderDetailAge"
            style="@style/HeaderTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/age"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <TextView
            android:id="@+id/tvDetailAge"
            style="@style/TextViewDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:age="@{viewModel.personData.dateInMillis}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeaderDetailAge" />

        <TextView
            android:id="@+id/tvHeaderDetailBirthday"
            style="@style/HeaderTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailAge" />

        <TextView
            android:id="@+id/tvDetailBirthday"
            style="@style/TextViewDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:birthday="@{viewModel.personData.dateInMillis}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeaderDetailBirthday" />

        <TextView
            android:id="@+id/tvHeaderDetailNote"
            style="@style/HeaderTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/note"
            bind:visibility_field="@{viewModel.personData.note}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailBirthday" />

        <TextView
            android:id="@+id/tvDetailNote"
            style="@style/TextViewDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.personData.note}"
            bind:visibility_field="@{viewModel.personData.note}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeaderDetailNote" />

        <TextView
            android:id="@+id/tvHeaderDetailPhone"
            style="@style/HeaderTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            bind:visibility_field="@{viewModel.personData.bindPhone}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailNote" />

        <TextView
            android:id="@+id/tvDetailPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/all_borders_one_pixel"
            android:drawableEnd="@drawable/call"
            android:drawableRight="@drawable/call"
            android:gravity="start|center_vertical"
            android:onClick="@{viewModel::onClickCall}"
            android:paddingBottom="3dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingTop="3dp"
            bind:visibility_field="@{viewModel.personData.bindPhone}"
            android:text="@{viewModel.personData.bindPhone}"
            android:textColor="#333"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/ivDetailSms"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeaderDetailPhone" />

        <ImageView
            android:id="@+id/ivDetailSms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/all_borders_one_pixel"
            android:onClick="@{viewModel::onClickSms}"
            android:paddingBottom="3dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingTop="3dp"
            android:src="@drawable/textsms"
            bind:visibility_field="@{viewModel.personData.bindPhone}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeaderDetailPhone"
            tools:ignore="contentDescription" />


    </android.support.constraint.ConstraintLayout>

</layout>